--- a/.env.codeship
+++ b/.env.codeship
@@ -6,7 +6,7 @@ APP_URL=http://foro.live/
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_tests
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=foro_tests
